2013-03-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4: Patch by Andrew Shadura, providing better support for
	three architectures they have in Debian.

2013-01-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in: Don't compile Tk with -DTCL_NO_DEPRECATED by default
	* unix/Makefile.in: any more, it might hurt when we compile Tk 8.x
	against Tcl 8.y with y > x, because new deprecated constructs might be
	added in higher Tcl versions (except for Tk 8.6, for now, because there
	is no higher 8.x yet)

2012-12-03  François Vogel  <fvogelnew1@free.fr>

   * generic/tkTextIndex.c: [Bug 3588824]: bug in image index handling
   * tests/textIndex.test:  for weird image names

2012-11-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinTest.c: [Bug 3585396]: winDialog.test requires user
	* tests/winDialog.test: interaction. Renumber test-cases as in
	Tk 8.6, and convert various to tcltest-2 style.

2012-09-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.h:     Add 8 colors to the supported color list
	* generic/tkColor.c:   (aqua, crimson, fuchsia, indigo, lime,
	* unix/tkUnixColor.c:  olive, silver and teal), part of TIP #403
	* xlib/rgb.txt
	* xlib/xcolors.c

2012-09-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:    Compile win32 binaries with -DTCL_NO_DEPRECATED

2012-08-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMenuDraw.c: [Bug 3562426]: Context menu goes out of edge of
	screen.

2012-08-24  Donal K. Fellows  <dkf@users.sf.net>

	* library/tkfbox.tcl (GlobFiltered): [Bug 3558535]: Factor out the
	filtered-sorted globbing code into one procedure that knows how to
	avoid nasty problems when non-list filters are used. This allows the
	rest of the [tk_getOpenFile] implementation to be ignorant of the
	considerable complexities of globbing.

2012-08-23  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bugs 3554026,3561016]: Stop crash with tearoff
	menus.
